always show scrollbar to avoid jumping

--- a/clingo.css
+++ b/clingo.css
@@ -2,6 +2,7 @@ body {
     background-color: #CCC;
     color: black;
     margin: 0;
+    overflow-y: scroll;
 }
 
 div.contents {
